--- a/vercel.json
+++ b/vercel.json
@@ -17,8 +17,11 @@
       "destination": "backend/main.py"
     },
     {
-  "source": "/(.*)",
-  "destination": "frontend/index.html"
-}
+      "handle": "filesystem"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "frontend/index.html"
+    }
   ]
 }
